public/styles.css
#sharableLinkButton {
  padding: 5px;
  background-color: rgb(185, 29, 29);;
  padding-left: 10px;
  padding-right: 10px;
  text-align: center;
  cursor: pointer;
  border: none;
  margin: 10px;
  color: whitesmoke;
}

#deviceHolder {
  padding: 5px;
  background-color: #333;
  padding-left: 10px;
  padding-right: 10px;
  text-align: center;
  cursor: pointer;
}

#deviceHolderActive {
  padding: 5px;
  background-color: rgb(185, 29, 29);;
  padding-left: 10px;
  padding-right: 10px;
  text-align: center;
  cursor: pointer;
}

#devices {
  display: flex;
  justify-content: center;
  flex-direction: row;
}


#artwork {
  max-width: fit-content;
  -webkit-box-shadow: -9px 10px 5px -5px rgba(0,0,0,0.75);
-moz-box-shadow: -9px 10x 5px -5px rgba(0,0,0,0.75);
box-shadow: -9px 10px 5px -5px rgba(0,0,0,0.75);
}

#nowPlaying {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding:10px;
}

#songText {
  max-width: fit-content;
}

#login {
  background-color: black;
  border-radius: 5px;
  color: white;
  margin: 5px;
  padding:5px;
  width: fit-content;
}

#artworkHolder {
  display: flex;
  flex-direction: column;
  padding: 10px;
  background-color: white;
}

#time {
  height: 10px;
  background-color: rgb(185, 29, 29);
  -webkit-box-shadow: -9px 10px 5px -5px rgba(0,0,0,0.75);
  -moz-box-shadow: -9px 10x 5px -5px rgba(0,0,0,0.75);
  box-shadow: -9px 10px 5px -5px rgba(0,0,0,0.75);
}
#container {
  display: flex;
  justify-content: center;
}

#profile {
  align-items: center;
  display: flex;
  flex-direction: column;
  width: min-content;
}

body {
  background-color: #000000;
  color:white;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

#playPause {
  cursor: pointer;
  margin:5px;
  color: #000000;
  background-color: white;
  width: 50px;
  height: 50px;
  border-radius: 50px;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

#next {
  cursor: pointer;
  margin:5px;
  color: #000000;
  background-color: white;
  width: 50px;
  height: 50px;
  border-radius: 50px;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

#prev {
  cursor: pointer;
  margin:5px;
  color: #000000;
  background-color: white;
  width: 50px;
  height: 50px;
  border-radius: 50px;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

#controls {
  display: flex;
  justify-content: center;
}
#playerPanel {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

#songTitleText {
  text-align: center;
}

#songArtistText {
  text-align: center;
}

#queueText {
  text-align: center;
}

#volumeSliderHolder {
  margin-top: 20px;
  width: 100%;
  min-width: -moz-available;          /* WebKit-based browsers will ignore this. */
  min-width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
  min-width: fill-available;
}

#volumeSlider {
  -webkit-appearance: none;
  appearance: none;
  background:rgb(185, 29, 29);
  height: 5px;
  width: -webkit-fill-available;
}

#errorTextHolder {
  color: red;
}

#songList {
  max-width: -moz-min-content;
  max-width: fit-content;
  width: 100%;
  min-width: -moz-available;          /* WebKit-based browsers will ignore this. */
  min-width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
  min-width: fill-available;
}

.queueItem {
  border: 2px solid #b8b8b8;
  display: flex;
  flex-direction: row;
}

.queueItemArtworkImage {
  margin: 20px;
}

.queueButton {
  margin: 20px;
  align-self: center;
  height: fit-content;
  align-self: center;
  font-size: x-large;
  background-color:rgb(185, 29, 29);
  border: none;
  color: white;
}

.queueItemInfoHolder {
  flex-grow: 1;
}

#queueSearchTextBox {
  font-size: xx-large;
  width: 100%;
  width: -moz-available;          /* WebKit-based browsers will ignore this. */
  width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
  width: fill-available;
}

